syntax = "proto3";
option go_package = "reservation/;reservation";
package reservation;

import "google/api/annotations.proto";
import "protoc-gen-swagger/options/annotations.proto";

//definition for swagger support
option (grpc.gateway.protoc_gen_swagger.options.openapiv2_swagger) = {
  info: {
    title: "ATE reservation Service";
    version: "1.0";
    contact: {
      name: "ATE reservation service project";
      url: "hyperl.io";
      email: "subash@hyperl.io";
    };
  };
  schemes: HTTP;
  consumes: "application/json";
  produces: "applications/json";
  responses: {
    key: "404";
    value: {
      description: "Returned when the resource does not exist.";
      schema: {
        json_schema: {
          type: STRING;
        }
      }
    }
  }
};


service ReservationService {

  // Read all reservation
  rpc ReadAll(ReadAllRequest) returns (ReadAllResponse) {
    option (google.api.http) = {
      get: "/all"
    };
  }

  // Read All By Table
  rpc ReadAllTable(ReadAllTableRequest) returns (ReadAllResponse) {
    option (google.api.http) = {
      post: "/all"
      body: "*"
    };
  }

  // Create new reservation
  rpc Create(CreateRequest) returns (CreateResponse) {
    option (google.api.http) = {
      post: "/create"
      body: "*"
    };
  }

  rpc Read(ReadRequest) returns (ReadResponse) {
    option (google.api.http) = {
      get: "/read/{id}"
    };
  }

  rpc Update(UpdateRequest) returns (UpdateResponse) {
    option (google.api.http) = {
      put: "/update/{reservation.id}",
      body: "*"

      additional_bindings {
        patch: "/update/{reservation.id}",
        body: "*"
      }
    };
  }

  rpc Delete(DeleteRequest) returns (DeleteResponse) {
    option (google.api.http) = {
      delete: "/delete/{id}"
    };
  }
}

message ResponseStatus {
  bool status = 1;
  string message = 2;
}

// reservation data model for sevices
message Reservation {
  int64 id = 1;
  int64 tableId = 2;
  string from = 3;
  string to = 4;
  int64 reservedById = 5;
  string description = 6;

  //Add provision for image upload here...
}

message UserType {
  int64 id = 1;
  string name = 2;
}

message CreateRequest {
  string api = 1;
  Reservation reservation = 2;
}

message CreateResponse {
  string api = 1;
  int64 id = 2;
  ResponseStatus error = 3;
}

message ReadAllRequest {
  string api = 1;
}

message ReadAllResponse {
  string api = 1;
  repeated Reservation reservations = 2; // list of all categories related to current user
  ResponseStatus error = 3;
}

message ReadAllTableRequest {
  string api = 1;
  int64 tableId = 2;
}

message ReadRequest {
  string api = 1;
  string id = 2;
}

message ReadResponse {
  string api = 1;
  Reservation reservation = 2;
  ResponseStatus error = 3;
}

message UpdateRequest {
  string api = 1;
  Reservation reservation = 2;
}

message UpdateResponse {
  string api = 1;
  int64 updated = 2; // number of entities updated successfully
  ResponseStatus error = 3;
}

message DeleteRequest {
  string api = 1;
  int64 id = 2;
}

message DeleteResponse {
  string api = 1;
  int32 deleted = 2;
  ResponseStatus error = 3;
}
